everything in the first version with side by side social links

--- a/home.html
+++ b/home.html
@@ -3,15 +3,55 @@
   <head>
   <meta charset="UTF-8">
 	<title>Alison Lee</title>
-  <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="normalize.css">
+	  <link rel="stylesheet" href="styles-practice.css">
+<!--     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Rubik|Pacifico|Work+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
-    <div class="header">
-      <h1>Hola!</h1>
-      <p>Welcome to my page.</p>
-    </div>
-    <div class="link">
-      <a href="http://linkedin.com"><img src=https://i.picsum.photos/id/229/50/50.jpg alt="LinkedIn"></a> <!-- LinkedIn -->
-    </div>
+   <nav>
+     <!-- HELLO I HAVE NO CONTENT....YET-->
+   </nav>
+   <div class="content-box-all">
+    <!-- -----LEFT HAND SIDE CONTENT----- -->
+     <div class="content-box-left">
+       <div class="item-left hola-greeting">
+         👋 Hola
+       </div>
+       <div class="item-left long-description">
+          <p>My name is Alison. I'm a product professional specializing in early-stage companies, and big DIY nerd 🤓. Hire me as a freelancer for: 
+          </p>
+          <ul>
+            <li>🚀 Product Management</li>
+            <li>🗓️ Project Management</li>
+            <li>🌐 Website Work</li>
+            <li>✍️ Copywriting (technical & marketing)</li>
+          </ul>       
+          <p>
+          I'm an alumnus and long-time volunteer with the <a href="https://loranscholar.ca/">Loran Scholars Foundation</a>. If you can't find me on <a href="https://instagram.com/cooking_al_gusto">@cooking_al_gusto</a> 👩🏻‍🍳then I'll be on my road bike or at the muay thai gym 🥊.
+          </p>
+       </div>
+     </div>
+    <!-- -----RIGHT HAND SIDE CONTENT----- -->
+     <div class="content-box-right">
+       <div class="item-right">
+        <a href="https://www.linkedin.com/in/alison-lee-a430454a/"><img src=images/linkedin.png alt="LinkedIn"></a>
+       </div>
+       <div class="item-right">
+        <a href="https://medium.com/@alison.v.lee"><img src=images/medium.png alt="Medium"></a>
+       </div>
+       <div class="item-right">
+        <a href="https://instagram.com/aliveelee"><img src=images/insta.png alt="Instagram"></a>
+       </div>
+       <div class="item-right">
+        <a href="https://twitter.com/aliveelee"><img src=images/twitterblue.png alt="Twitter"></a>
+       </div>
+     </div>
+   </div>
+
+    <footer>
+    	<p>Copyright 2020. This site was coded from scratch by Alison Lee.</p>
+    </footer>
+
   </body>
 </html>
