single column design ready to launch

--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
 	<title>Alison Lee</title>
     <link rel="stylesheet" href="normalize.css">
-	  <link rel="stylesheet" href="styles-practice.css">
+	  <link rel="stylesheet" href="styles.css">
 <!--     <link href="https://fonts.googleapis.com/css?family=Noto+Sans&display=swap" rel="stylesheet"> -->
     <link href="https://fonts.googleapis.com/css?family=Rubik|Pacifico|Work+Sans&display=swap" rel="stylesheet">
   </head>
@@ -28,23 +28,23 @@
             <li>✍️ Copywriting (technical & marketing)</li>
           </ul>       
           <p>
-          I'm an alumnus and long-time volunteer with the <a href="https://loranscholar.ca/">Loran Scholars Foundation</a>. If you can't find me on <a href="https://instagram.com/cooking_al_gusto">@cooking_al_gusto</a> 👩🏻‍🍳then I'll be on my road bike or at the muay thai gym 🥊.
+          I'm an alumnus and long-time volunteer with the <a href="https://loranscholar.ca/">Loran Scholars Foundation</a>. If you can't find me on <a href="https://instagram.com/cooking_al_gusto">@cooking_al_gusto</a> 👩🏻‍🍳then I'll be on my road bike or at the Muay Thai gym 🥊.
           </p>
        </div>
      </div>
     <!-- -----RIGHT HAND SIDE CONTENT----- -->
      <div class="content-box-right">
        <div class="item-right">
-        <a href="https://www.linkedin.com/in/alison-lee-a430454a/"><img src=images/linkedin.png alt="LinkedIn"></a>
+        <a href="https://www.linkedin.com/in/alison-lee-a430454a/" target="_blank"><img src=images/linkedin.png alt="LinkedIn"></a>
        </div>
        <div class="item-right">
-        <a href="https://medium.com/@alison.v.lee"><img src=images/medium.png alt="Medium"></a>
+        <a href="https://medium.com/@alison.v.lee" target="_blank"><img src=images/medium.png alt="Medium"></a>
        </div>
        <div class="item-right">
-        <a href="https://instagram.com/aliveelee"><img src=images/insta.png alt="Instagram"></a>
+        <a href="https://twitter.com/aliveelee" target="_blank"><img src=images/twitterblue.png alt="Twitter"></a>
        </div>
        <div class="item-right">
-        <a href="https://twitter.com/aliveelee"><img src=images/twitterblue.png alt="Twitter"></a>
+        <a href="https://instagram.com/aliveelee" target="_blank"><img src=images/insta.png alt="Instagram"></a>
        </div>
      </div>
    </div>
