fixed mobile responsiveness and background gradient and meta tags

--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-  <meta charset="UTF-8">
+  	<meta charset="UTF-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  	<meta name="keywords" content="Aison Lee, Product Manager, Product Management, Loran, Berlin, Toronto, Canadian, Freelance, Writer, alisonlee">
+	<meta name="description" content="Product Management Professional">
+ 	<meta name="author" content="Alison Lee">
+ 	<meta property="og:title" content="Drew Minns">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="http://alisonlee.ca">
+	<meta property="og:site_name" content="Alison Lee">
+	<meta property="og:description" content="Product Management Professional">
+	<meta name="twitter:card" content="summary">
+	<meta name="twitter:url" content="http://alisonlee.ca">
+	<meta name="twitter:title" content="Alison Lee">
+	<meta name="twitter:description" content="Product Management Professional">
 	<title>Alison Lee</title>
     <link rel="stylesheet" href="normalize.css">
-	  <link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Rubik|Pacifico|Work+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
@@ -49,7 +62,7 @@
    </div>
 
     <footer>
-    	<p>Copyright 2020. This site was coded from scratch by Alison Lee.</p>
+    	<p>&copy 2020. This page was coded from scratch by Alison Lee.</p>
     </footer>
 
   </body>
