added hiring email link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
          👋 Hola
        </div>
        <div class="item-left long-description">
-          <p>I'm Alison, a product professional specializing in early-stage companies and a DIY nerd 🤓. Hire me as a freelancer for: 
+          <p>I'm Alison, a product professional specializing in early-stage companies and a DIY nerd 🤓. <a href="mailto:hire@alisonlee.ca">Hire me as a freelancer</a> for: 
           </p>
           <ul>
             <li>🚀 Product Management</li>
@@ -40,14 +40,14 @@
             <li>✍️ Copywriting (technical & marketing)</li>
           </ul>       
           <p>
-          I'm an alumnus and long-time volunteer with the <a href="https://loranscholar.ca/">Loran Scholars Foundation</a>. If you can't find me on <a href="https://instagram.com/cooking_al_gusto">@cooking_al_gusto</a> 👩🏻‍🍳 then I'll be on my road bike or at the Muay Thai gym 🥊.
+          I'm an alumnus and long-time volunteer with the <a href="https://loranscholar.ca/" target="_blank">Loran Scholars Foundation</a>. I share my passion for food on <a href="https://instagram.com/cooking_al_gusto" target="_blank">@cooking_al_gusto</a> 👩🏻‍🍳. You can also find me on my road bike or at the Muay Thai gym 🥊.
           </p>
        </div>
      </div>
     <!-- -----RIGHT HAND SIDE CONTENT----- -->
      <div class="content-box-right">
        <div class="item-right">
-        <a href="https://www.linkedin.com/in/alison-lee-a430454a/" target="_blank" hover><img src=images/linkedin.png alt="LinkedIn"></a>
+        <a href="https://www.linkedin.com/in/alison-lee-a430454a/" target="_blank"><img src=images/linkedin.png alt="LinkedIn"></a>
        </div>
        <div class="item-right">
         <a href="https://medium.com/@alison.v.lee" target="_blank"><img src=images/medium.png alt="Medium"></a>
