--- a/index.html
+++ b/index.html
@@ -6,15 +6,17 @@
   	<meta name="keywords" content="Aison Lee, Product Manager, Product Management, Loran, Berlin, Toronto, Canadian, Freelance, Writer, alisonlee">
 	<meta name="description" content="Product Management Professional">
  	<meta name="author" content="Alison Lee">
- 	<meta property="og:title" content="Drew Minns">
+ 	<meta property="og:title" content="Alison Lee">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://alisonlee.ca">
 	<meta property="og:site_name" content="Alison Lee">
 	<meta property="og:description" content="Product Management Professional">
+  <meta property="og:image" content="https://www.alisonlee.ca/images/headshot.jpeg">
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:url" content="http://alisonlee.ca">
 	<meta name="twitter:title" content="Alison Lee">
 	<meta name="twitter:description" content="Product Management Professional">
+  <meta name="twitter:image" content="https://www.alisonlee.ca/images/headshot.jpeg">
 	<title>Alison Lee</title>
     <link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="styles.css">
