--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 	<meta property="og:url" content="http://alisonlee.ca">
 	<meta property="og:site_name" content="Alison Lee">
 	<meta property="og:description" content="Product Management Professional">
-  <meta property="og:image" content="https://www.alisonlee.ca/images/headshot.jpeg">
+  <meta property="og:image" content="https://www.alisonlee.ca/images/preview_small.png">
 	<meta name="twitter:card" content="summary">
 	<meta name="twitter:url" content="http://alisonlee.ca">
 	<meta name="twitter:title" content="Alison Lee">
 	<meta name="twitter:description" content="Product Management Professional">
-  <meta name="twitter:image" content="https://www.alisonlee.ca/images/headshot.jpeg">
+  <meta name="twitter:image" content="https://www.alisonlee.ca/images/preview_small.png">
 	<title>Alison Lee</title>
     <link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="styles.css">
