--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
   	<meta charset="UTF-8">
   	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-  	<meta name="keywords" content="Aison Lee, Product Manager, Product Management, Loran, Berlin, Toronto, Canadian, Freelance, Writer, alisonlee">
+  	<meta name="keywords" content="Aison Lee, Product Manager, Product Management, Loran, Toronto, Canadian, Freelance, Writer, alisonlee">
 	<meta name="description" content="Product Management Professional">
  	<meta name="author" content="Alison Lee">
  	<meta property="og:title" content="Alison Lee">
@@ -33,17 +33,17 @@
          👋 Hola
        </div>
        <div class="item-left long-description">
-          <p>I'm Alison, a product professional specializing in early-stage companies and a DIY nerd 🤓. <a href="mailto:hire@alisonlee.ca">Hire me as a freelancer</a> for: 
+          <p>I'm Alison, an engineer by training with 8 yrs startup experience in product management, communications, and operations. I'm an alumnus and volunteer with the <a href="https://loranscholar.ca/" target="_blank">Loran Scholars Foundation</a>. I enjoy writing, nature, many sports, knitting, and exploring seasonal food. 
           </p>
+		<p>I'm not currently looking for work, but please <a href="mailto:hire@alisonlee.ca">reach out</a> if you'd like to connect about: 
+		</p>
           <ul>
+            <li>😷 <a href="https://breathe99.com">Breathe99</a></li>
+            <li>⚙️ Startup Operations</li>
             <li>🚀 Product Management</li>
             <li>🗓️ Project Management</li>
-            <li>🌐 Website Work</li>
             <li>✍️ Copywriting (technical & marketing)</li>
           </ul>       
-          <p>
-          I'm an alumnus and long-time volunteer with the <a href="https://loranscholar.ca/" target="_blank">Loran Scholars Foundation</a>. I share my passion for food on <a href="https://instagram.com/cooking_al_gusto" target="_blank">@cooking_al_gusto</a> 👩🏻‍🍳. You can also find me on my road bike or at the Muay Thai gym 🥊.
-          </p>
        </div>
      </div>
     <!-- -----RIGHT HAND SIDE CONTENT----- -->
@@ -58,13 +58,13 @@
         <a href="https://twitter.com/aliveelee" target="_blank"><img src=images/twitterblue.png alt="Twitter"></a>
        </div>
        <div class="item-right">
-        <a href="https://instagram.com/aliveelee" target="_blank"><img src=images/insta.png alt="Instagram"></a>
+        <a href="https://instagram.com/cooking_al_gusto" target="_blank"><img src=images/insta.png alt="Instagram"></a>
        </div>
      </div>
    </div>
 
     <footer>
-    	<p>&copy 2020. This page was coded from scratch by Alison Lee.</p>
+    	<p>&copy 2021. This page was coded from scratch by Alison Lee.</p>
     </footer>
 
   </body>
