changed to open for work

--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
        <div class="item-left long-description">
           <p>I'm Alison, an engineer by training with 8 yrs startup experience in product management, communications, and operations. I'm an alumnus and volunteer with the <a href="https://loranscholar.ca/" target="_blank">Loran Scholars Foundation</a>. I enjoy writing, nature, many sports, knitting, and exploring seasonal food. 
           </p>
-		<p>I'm not currently looking for work, but please <a href="mailto:hire@alisonlee.ca">reach out</a> if you'd like to connect about: 
+		<p>Please <a href="mailto:hire@alisonlee.ca">reach out</a> if you'd like to connect about freelance work related to: 
 		</p>
           <ul>
-            <li>😷 <a href="https://breathe99.com">Breathe99</a></li>
             <li>⚙️ Startup Operations</li>
             <li>🚀 Product Management</li>
             <li>🗓️ Project Management</li>
